# estimativa_custos_medicos

./: .gitignore  README.md
api/: prediction_model.pkl  pyproject.toml
api/clinic_api/: main.py
model/: README.md
model/src/: prediction_model.ipynb
web/: .gitignore  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/pages/: predictForm.tsx
